--- a/usefullinks.html
+++ b/usefullinks.html
@@ -20,29 +20,36 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
       
-      <ul class="nav nav-pills nav-fill" >
-  <li class="nav-item">
-    <a class="nav-link " href="home.html">Home</a>
-  </li>
-     <li class="nav-item">
-    <a class="nav-link" href="localdishes.html">Local Dishes</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="historicalplaces.html">Historical Places</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" href="usefullinks.html">Useful Links</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link " href="aboutme.html">About Me</a>
-  </li>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="home.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="localdishes.html">Local Dishes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="historicalplaces.html">Historical Places</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="usefullinks.html">Useful Links<span class="sr-only">(current)</span></a>
+      </li>
         <li class="nav-item">
-    <a class="nav-link" href="contactme.html">Contact Me</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link " href="registration.html">Registration</a>
-  </li>
-</ul><hr width="100%">
+        <a class="nav-link" href="aboutme.html">About Me</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="contactme.html">Contact Me</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="registration.html">Registration</a>
+      </li>
+    </ul>
+  </div>
+</nav><hr width="100%">
       <div class="container">
        <center>
 <br>
